# Eatsko

./: .gitignore  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  sprint3
Eatsko/: asgi.py  settings.py  urls.py  wsgi.py
businessdashboard/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
businessdashboard/migrations/: 0001_initial.py  0002_menu_price.py  0003_delete_menu.py
businessdashboard/static/cssbusiness/: main.css
businessdashboard/templates/businessdashboard/: base.html  businesspage.html  dashboard.html  editbusinesspage.html  menu_confirm_delete.html  menu_detail.html  menu_form.html  profile.html  viewrating.html
sessionmanager/: apps.py  forms.py  models.py  urls.py  views.py
sessionmanager/migrations/: 0001_initial.py  0002_delete_eatery.py
sessionmanager/templates/sessionmanager/: base.html  login.html  loginbusinessowner.html  loginuser.html  (+4 more)
userdashboard/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
userdashboard/migrations/: 0001_initial.py  0002_alter_eatery_banner_alter_eatery_logo.py  0002_profile_account_type.py  0003_alter_eatery_details.py  0003_eatery_food_genre.py  0004_alter_profile_profile_picture.py  0004_remove_eatery_user_alter_eatery_food_genre_and_more.py  0005_alter_profile_user.py  0005_remove_eatery_food_genre_menu_eatery_menu_items.py  0006_foodgenre_profile_preffered_genres.py  0006_remove_eatery_menu_items_menu_eatery.py  0007_profile_eatery_alter_menu_eatery.py  0008_alter_profile_preffered_genres.py  0009_review.py  0010_alter_review_eatery.py
(+12 files in other folders)
